[tool.poetry]
name = "friendly-spoon"
version = "0.1.0"
description = "Meehl's Website"
authors = ["Ian Kollipara <ian.kollipara@cune.org>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
Jinja2 = "^3.1.1"
sqlmodel = "^0.0.6"
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.5"
black = "^22.3.0"
isort = "^5.10.1"
bandit = "^1.7.4"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
